# staff-list

./: .gitignore  LICENSE  README.md
question_01/build-staff_details-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
question_01/build-staff_details-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-fc30b51fc3e1cbb7dbc7.json  cmakeFiles-v1-934828d067d84c5805fe.json  codemodel-v2-a003e70920245f869c5e.json  directory-.-Debug-0789745db37835dd055c.json  index-2024-01-03T04-35-04-0026.json  target-staff_details-Debug-d54011995ccd894156b3.json  target-staff_details_autogen-Debug-ff072e1dd3c44d2a2794.json  target-staff_details_autogen_timestamp_deps-Debug-d14aaa31a14e3e801c46.json
question_01/build-staff_details-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
question_01/build-staff_details-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/staff_details_autogen/: deps  mocs_compilation.cpp
question_01/build-staff_details-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/staff_details_autogen/EWIEGA46WW/: moc_staffdetails.cpp  moc_staffdetails.cpp.d  moc_staffdetailsgui.cpp  moc_staffdetailsgui.cpp.d
question_01/staff_details/: CMakeLists.txt  filewriter.cpp  main.cpp  staffdetails.cpp  staffdetails.h  staffdetailsgui.cpp  stafflist.cpp  stafflist.h  stafflistwriter.cpp  stafflistwriter.h
question_02/reflective_programming/: CMakeLists.txt  filewriter.h  main.cpp  staffdetails.cpp  staffdetails.h  staffdetailsgui.h  stafflist.h  stafflistwriter.cpp  stafflistwriter.h
